# SemanticRAG

./: 1-哈利波特与魔法石.txt  2-哈利波特与密室.txt  3-哈利波特与阿兹卡班囚徒.txt  4-哈利波特与火焰杯.txt  5-哈利波特与凤凰社.txt  6-哈利波特与混血王子.txt  7-哈利波特与死圣.txt  DEVLOG.md  README.md  TOPIC_MODELING_GUIDE.md  chunking_results.txt  compare_chunking_methods.py  demo_chapter_chunking.py  main.py  pyproject.toml  requirements.txt  test_enhanced_rag.py  topic_model_comparison.py
mcp_server/: README.md  semantic_rag_server.py
rag_chroma_data_main/: chroma.sqlite3
rag_chroma_data_main/8f74248a-43d3-419a-b5dd-ee893d626609/: index_metadata.pickle
rag_system/: main.py  requirements.txt
rag_system/chunking/: chapter_aware_chunker.py  chonkie_chunker.py  llm_chunker.py  metadata_extractor.py
rag_system/embedding/: embedder.py
rag_system/rag_chroma_data_main/: chroma.sqlite3
rag_system/utils/: config.py
rag_system/vector_store/: chroma_db.py
tests/: test_chunker.py  test_embedder.py
