[project]
name = "semanticrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bertopic>=0.17.0",
    "chonkie>=1.0.8",
    "chromadb>=1.0.12",
    "google-generativeai>=0.8.5",
    "jieba>=0.42.1",
    "magic-pdf>=1.3.12",
    "mcp[cli]>=1.9.2",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
]
